--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fimages%2Fanimals%2Fcat&psig=AOvVaw1ke06leCWpWSNli2jnvYKl&ust=1693069302437000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCKDH4Oak-IADFQAAAAAdAAAAABAE" alt="this is cat image,not loaded properly">
+	<img src="https://unsplash.com/photos/black-pug-with-gray-knit-scarf-Mv9hjnEUHR4" alt="this is my favourite animal">
     <script type="text/javascript" src="./script.js">
 </script>
 
