--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src="https://unsplash.com/photos/black-pug-with-gray-knit-scarf-Mv9hjnEUHR4" alt="this is my favourite animal">
+	<img src="https://images.unsplash.com/photo-1562975444-d910f117a84f?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bWFtbWFsfGVufDB8fDB8fHww" alt="this is my favourite animal">
     <script type="text/javascript" src="./script.js">
 </script>
 
